<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">HopNet物联</string>

    <string name="hqhp_dzgs">成都华气厚普电子技术有限公司</string>
    <string name="hqhp_dzgs_address">四川省成都市郫都区康隆路555号</string>

    <string name="year_ago">年前</string>
    <string name="years_ago">年前</string>
    <string name="month_ago">个月前</string>
    <string name="months_ago">个月前</string>
    <string name="day_ago">天前</string>
    <string name="days_ago">天前</string>
    <string name="hour_ago">小时前</string>
    <string name="hours_ago">小时前</string>
    <string name="minute_ago">分钟前</string>
    <string name="minutes_ago">分钟前</string>
    <string name="just_now">刚刚</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="network_error">网络错误</string>
    <string name="unknown_error">未知错误</string>
    <string name="update">升级</string>
    <string name="ignore">忽略</string>
    <string name="new_version_available">新版本上线</string>
    <string name="more">更多</string>
    <string name="normal">正常</string>
    <string name="unnormal">异常</string>
    <string name="today_sales">今日销量:</string>
    <string name="no_detail_address">暂无详细地址</string>

    <string name="actived">已激活</string>
    <string name="inactived">未激活</string>
    <string name="belong">所属设备:</string>
    <string name="link">链接设备:</string>
    <string name="gateway_status">状态:</string>
    <string name="disk">硬盘</string>
    <string name="memory">内存</string>
    <string name="cell_data">流量</string>
    <string name="sim_no">SIM卡号</string>
    <string name="gateway_date">网关时间</string>
    <string name="gps_information">GPS信息</string>
    <string name="app_version">程序版本</string>
    <string name="hardware_version">硬件版本</string>
    <string name="protocol_version">协议版本</string>

    <string name="hmsdk_initial_failed">视频监控初始化失败</string>
    <string name="stop_video_save_at">停止录像，视频存放在：</string>
    <string name="start_video">开始录像</string>
    <string name="capture_failed">拍照失败</string>
    <string name="capture_succeed_save_at">拍照成功！图片存放在: </string>
    <string name="protection_succeed">布防成功</string>
    <string name="removal_succeed">撤防成功</string>
    <string name="exit_hm_video">确定要退出视频播放吗?</string>

    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="login_successfully">登录成功</string>
    <string name="input_account">请输入您的账号</string>
    <string name="input_password">请输入您的密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="account_password_error">用户名或密码错误</string>
    <string name="username_password_cant_be_empty">用户名或密码不能为空</string>

    <string name="input_phone">请输入手机号</string>
    <string name="input_invite">请输入邀请码</string>
    <string name="phone_cant_be_empty">手机号不能为空</string>
    <string name="password_must_be_same">密码必须一致</string>
    <string name="invitation_code_cant_be_empty">邀请码不能为空</string>
    <string name="password_cant_be_empty">密码不能为空</string>

    <string name="verification_code_cant_empty">验证码不能为空</string>
    <string name="verification_code_password_cant_empty">验证码或新密码不能为空</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="get_verification_code_again">重新获取</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_password_failed">找回密码失败</string>
    <string name="reset_password_successfully">找回密码成功</string>

    <string name="attention">注意</string>
    <string name="authorization_to_receive_push_message">为了更好地接收到推送消息，请开启"修改系统设置权限"</string>
    <string name="go_to_settings">去往设置页面</string>

    <string name="no_events">暂无最新事件</string>
    <string name="up_to_date_events">最新事件</string>
    <string name="no_follow">暂无关注数据</string>

    <string name="all_station">全部站点</string>
    <string name="station_list">站点列表</string>
    <string name="status">状态</string>
    <string name="type">类型</string>
    <string name="no_station_data">暂无站点数据</string>

    <string name="all_events">全部事件</string>

    <string name="getting_weather_data">正在获取天气情况</string>
    <string name="getting_weather_data_failed">获取天气情况失败</string>
    <string name="realtime_weather">实时天气</string>
    <string name="no_alarm_data">暂无报警信息</string>
    <string name="alarm_message">条报警信息</string>

    <string name="station_equipment_monitor">设备监控</string>
    <string name="station_alarm">报警信息</string>
    <string name="station_statistics">运营统计</string>
    <string name="station_technology">工艺流程图</string>
    <string name="station_maintenance">设备维保</string>
    <string name="station_scheduling">调度记录</string>
    <string name="station_inspection">巡检记录</string>
    <string name="station_video">视频监控</string>
    <string name="station_gateway">采集网关</string>
    <string name="station_more">更多</string>

    <string name="manufacture">生产厂家: </string>
    <string name="date_purchase">购买日期: </string>
    <string name="price">购买价格: </string>
    <string name="production_date">生产日期: </string>
    <string name="assets_no">资产编码档案: </string>
    <string name="next_maintenance_date">过期日期: </string>

    <string name="modules_setting">选择关注模块</string>
    <string name="detail_data">查看更多数据</string>
    <string name="done">完成</string>
    <string name="shown_modules">当前显示模块</string>
    <string name="optional_modules">可选显示模块</string>
    <string name="unsubscribe">取消关注</string>

    <string name="copy_email_to_clipboard">已复制邮箱地址到剪贴板</string>
    <string name="no_camera_permission">没有权限使用相机，请前往设置页面授权</string>
    <string name="checking_for_update">正在检查更新......</string>
    <string name="no_update_available">已是最新版本</string>
    <string name="update_description">更新说明: </string>
    <string name="downloading">正在下载......</string>
    <string name="file_path_error_to_update">路径错误，无法更新</string>

    <string name="authorization_to_login_in_web">是否授权网页登陆？</string>
    <string name="qrcode_newwork_error_scan_again">二维码失效或网络错误，请重新扫描</string>
    <string name="authorization_failed">授权失败</string>
    <string name="authorization_successfully">授权成功</string>
    <string name="turn_on_off_flashlight">打开/关闭闪光灯</string>

    <string name="about_telephone">联系电话</string>
    <string name="about_email">邮箱</string>
    <string name="about_app">关于版本</string>
    <string name="about_scan_qrcode">扫码登陆</string>
    <string name="about_hqhop">关于厚普股份</string>
    <string name="about_feedback">意见反馈</string>
    <string name="about_profile">我的名片</string>

    <string name="station_leader">站长: </string>
    <string name="telephone">电话: </string>

    <string name="all">全部</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="alarm">报警</string>
    <string name="alarm_clear">报警消除</string>
    <string name="scene_change">场景切换</string>

    <string name="server_address">服务器地址</string>
    <string name="formal_server_address">正式服务器地址</string>
    <string name="informal_server_address">测试服务器地址</string>
    <string name="have_set_server_address_as">已设置服务器地址为</string>
    <string name="input_server_address">请输入服务器地址</string>

    <string name="title_workbench">工作台</string>
    <string name="title_follow">关注</string>
    <string name="title_statistics">运营统计</string>
    <string name="title_map">地图</string>
    <string name="title_about">关于</string>
    <string name="title_alert">报警信息</string>
    <string name="no_equipment_data">暂无设备数据</string>

    <string name="menu_item_notification_text_workbench">通知</string>
    <string name="menu_item_add_text_follow">添加</string>
    <string name="double_click_to_exit">再次点击返回键退出程序</string>
    <string name="input_repeat_password">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="login_failed">登陆失败</string>
    <string name="token_is_empty">Token为空，请检查用户名</string>
    <string name="lng_station">LNG站</string>
    <string name="cng_station">CNG站</string>
    <string name="lcng_station">L-CNG站</string>
    <string name="gasify_station">气化站</string>
    <string name="gas_station">加气站</string>
    <string name="hydrogen">加氢站</string>
    <string name="factory">工厂</string>
    <string name="ship">船舶</string>
    <string name="gasonline_station">加油站</string>
    <string name="charging_station">充电站</string>
    <string name="other">其他</string>
    <string name="title_activity_module_setting">设置</string>
    <string name="unknown">未知</string>
    <string name="input_feedback">请留下您宝贵的建议</string>
    <string name="thx_feedback">感谢您的建议</string>

    <string name="date_ascending">时间由远到近</string>
    <string name="date_descending">时间由近到远</string>
    <string name="sales_ascending">今日销量由少到多</string>
    <string name="sales_descending">今日销量由多到少</string>
    <string name="emergency_ascending">轻微到紧急</string>
    <string name="emergency_descending">紧急到轻微</string>
    <string name="liquid_ascending">液位由小到大</string>
    <string name="liquid_descending">液位由大到小</string>
    <string name="pressure_ascending">压力由小到大</string>
    <string name="pressure_descending">压力由大到小</string>
    <string name="recent_one_day">一天以内</string>
    <string name="recent_three_days">三天以内</string>
    <string name="recent_five_days">五天以内</string>
    <string name="enter_station_name">请输入站点名称</string>
    <string name="receive_push_message">接收推送消息</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_all_liquid">AllLiquidActivity</string>
</resources>
