<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/et_address_select_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_address" />

    <RadioGroup
        android:id="@+id/rg_select_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_debug_select_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informal_server_address" />

        <RadioButton
            android:id="@+id/rb_release_select_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formal_server_address" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>