<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_container_update"
    android:orientation="vertical"
    android:padding="25dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/new_version_available"
        android:textColor="#646464"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_description_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        tools:text="1. 云想衣裳花想容啊是的高科技；
2. 春风拂槛露华浓阿斯蒂芬；
3. 若非群玉山头见啊；
4. 会向瑶台月下逢阿斯蒂芬噶啊但是发射点发撒阿根廷士大夫。" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_download_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_download_update"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="#D0021B" />

        <Button
            android:id="@+id/btn_ignore_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_ignore_update"
            android:text="@string/ignore"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>